# indi-ids

./: CMakeLists.txt  FinduEye-SDK.cmake  INSTALL  LICENSE  README  TODO  config.h.cmake  ids_camera_test.cpp  ids_ccd.cpp  ids_ccd.h  ids_driver.cpp  ids_driver.h  indi_ids.xml.cmake
